adds test and basic schema for answers for used apis
